--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pizza App</string>
+    <string name="select_size">Select Size</string>
+    <string name="select_crust">Select Crust</string>
+    <string name="add_cart">Add To Cart</string>
 </resources>
