implement Alert dialog to show crust and size selections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="select_size">Select Size</string>
     <string name="select_crust">Select Crust</string>
     <string name="add_cart">Add To Cart</string>
+    <string name="add">Add</string>
 </resources>
