--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="select_crust">Select Crust</string>
     <string name="add_cart">Add To Cart</string>
     <string name="add">Add</string>
+    <string name="my_cart">My Cart</string>
 </resources>
